--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4.17"
+pagurus = { version = "0.6.3", features = ["fixed_window", "random", "image", "wasm"]}
+png = "0.17.8"
+rand = "0.8.5"
