--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
 [dependencies]
 log = "0.4.17"
 pagurus = { version = "0.6.3", features = ["fixed_window", "random", "image", "wasm"]}
