--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ log = "0.4.17"
 pagurus = { version = "0.6.3", features = ["fixed_window", "random", "image", "wasm"]}
 png = "0.17.8"
 rand = "0.8.5"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
 
 # TODO: remove
 [patch.crates-io]
