--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
           cp target/wasm32-unknown-unknown/release/mineplacer.wasm _site/game.wasm
           cp web/index.html _site/
           cp web/*.jpg _site/
+          cp web/*.png _site/
       - name: Upload GitHub Pages artifacts
         uses: actions/upload-pages-artifact@v1
 
