--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,27 +1,15 @@
 {
   "name": "Mineplacer",
   "short_name": "Mineplacer",
-  "theme_color": "#c43f57",
-  "background_color": "#c43f57",
+  "theme_color": "#858383",
+  "background_color": "#858383",
   "display": "standalone",
   "scope": "./",
   "start_url": "./index.html",
   "icons": [
     {
-      "src": "icon-32x32.png",
-      "sizes": "32x32"
-    },
-    {
-      "src": "icon-64x64.png",
-      "sizes": "64x64"
-    },
-    {
-      "src": "icon-128x128.png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "icon-256x256.png",
-      "sizes": "256x256"
+      "src": "favicon.png",
+      "sizes": "48x48"
     }
   ]
 }
