--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,19 @@ publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "mineplacer"
+required-features = ["tui"]
+
 [lib]
 crate-type = ["lib", "cdylib"]
 
+[features]
+tui = ["pagurus_tui"]
+
 [dependencies]
 pagurus = { version = "0.7.0", features = ["fixed_window", "random", "image", "wasm"]}
+pagurus_tui = { version = "0.7.0", optional = true }
 png = "0.17.8"
 rand = "0.8.5"
 serde = { version = "1.0.163", features = ["derive"] }
